<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@drawable/fondo_home"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@color/trasparente_dark"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#CDF0EDED"
            app:cardCornerRadius="10dp"
            app:cardElevation="15dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="122dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/ic_placa"
                        tools:ignore="VectorDrawableCompat" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_placa"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:hint="@string/input_placa" />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_clear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:drawableLeft="@drawable/ic_clean"
                        android:background="@drawable/rounded_button_gray"
                        android:text="@string/clear"
                        android:textAllCaps="false" />

                    <Button
                        android:id="@+id/btn_consultar"
                        style="@android:style/Widget.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:drawableLeft="@drawable/ic_research"
                        android:background="@drawable/rounded_button_green"
                        android:text="@string/consult"
                        android:textAllCaps="false"
                        android:textColor="@color/text_white" />
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</RelativeLayout>