<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                app:srcCompat="@drawable/ic_no_circula"
                tools:ignore="VectorDrawableCompat" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/no_placa"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_placa"
                        style="@style/TextAppearance.AppCompat.Subhead"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:ellipsize="end"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="@android:color/black"
                        tools:targetApi="jelly_bean"
                        tools:text="@string/input_placa" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:text="@string/fecha_consulta"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_fecha"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:ellipsize="end"
                        android:maxLines="1"
                        tools:text="fecha" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dias_no_circula"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/txt_lu"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="LU"
                                android:textColor="#4CAF50" />

                            <TextView
                                android:id="@+id/txt_ma"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="MA"
                                android:textColor="#4CAF50" />

                            <TextView
                                android:id="@+id/txt_mi"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="MI"
                                android:textColor="#4CAF50" />

                            <TextView
                                android:id="@+id/txt_ju"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="JU"
                                android:textColor="#4CAF50" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/txt_vi"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="VI"
                                android:textColor="#4CAF50" />

                            <TextView
                                android:id="@+id/txt_sa"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="SA"
                                android:textColor="#4CAF50" />

                            <TextView
                                android:id="@+id/txt_do"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="DO"
                                android:textColor="#4CAF50" />
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>